--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Floriano</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
-    <h1>Olá Mundo!</h1>
+    <main>
+        <section id="telefone">
+
+        </section>
+        <section id="redes-sociais">
+
+        </section>
+    </main>
 </body>
 </html>
